[gd_scene load_steps=2 format=3 uid="uid://dlnln1t4meyjy"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_gdujl"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_gdujl")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="invincible" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="invincible" to="." method="_on_invincible_timeout"]
